Made a bunch of content edits

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "technotales",
-  "displayName": "Technotales: 10 Modern Parables for the Tech Enthusiast",
+  "name": "techno-tales",
+  "displayName": "Techno Tales: Reimagined Parables for the Modern Age",
   "author": "Michael D. Callaghan",
   "contributors": [],
   "version": "1.0.0",
