--- a/title.yaml
+++ b/title.yaml
@@ -1,8 +1,8 @@
 ---
-title: Technotales
-subtitle: 10 Modern Parables for the Tech Enthusiast
+title: Techno Tales
+subtitle: Reimagined Parables for the Modern Age
 author: Michael D. Callaghan
 language: en-US
 rights: © 2023 Michael D. Callaghan, All Rights Reserved
-cover-image: chapters/images/cover.jpg
+cover-image: chapters/images/cover.png
 ---
