--- a/title.yaml
+++ b/title.yaml
@@ -1,6 +1,6 @@
 ---
 title: Techno Tales
-subtitle: Reimagined Parables for the Modern Age
+subtitle: 11 Modern Allegories for Business and Life
 author: Michael D. Callaghan
 language: en-US
 rights: © 2023 Michael D. Callaghan, All Rights Reserved
